# Distributed_Job_Scheduler

./: .gitignore  LICENSE  README.md  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  setup-instructions.md
api/: Dockerfile
api/app/: database.py  main.py  models.py
api/routes/: jobs.py  logs.py
api/services/: minio_client.py  postgres_client.py  redis_client.py
charts/: README.md
cli/: scheduler_cli.py  setup.py
infra/: prometheus.yml
infra/grafana/dashboards/json/: overview.json
scheduler/: Dockerfile  database.py  job_assigner.py  leader_election.py  main.py  models.py  recovery.py
tests/: integration_test.py  verify_script.py
worker/: Dockerfile  agent.py  database.py  env_resolver.py  executor.py  main.py  models.py  reporter.py  runner.py
